Fix "Exiting color change popup via Cancel modifies the selected diagram object"

umbrello/umlwidgets/associationwidget.cpp
- In function slotMenuSelection case ListPopupMenu::mt_Line_Color, after
  returning from QColorDialog::getColor() require newColor.isValid() to
  return true as precondition for modifying the line color.

umbrello/umlwidgets/widgetbase.cpp
- In function slotMenuSelection cases mt_Line_Color_Selection and
  mt_Fill_Color_Selection, after returning from QColorDialog::getColor()
  require newColor.isValid() to return true as precondition for
  modifying the color.
- Move opening brace outside #if / #else / #endif to avoid imbalance
  with closing brace.

BUG: 443679